# RustGame

./: .gitignore  Cargo.toml  LICENSE  README.md  notes.md  rustfmt.toml
examples/: Cargo.toml
examples/src/creature_animation/: main.rs
examples/src/draw_shapes/: main.rs
examples/src/load_and_store_images/: main.rs
examples/src/mouse_events/: main.rs
examples/src/sdl2_example/: main.rs
examples/src/sdl_example/: main.rs
rust_game/: Cargo.toml
rust_game/src/: canvas.rs  color.rs  context.rs  draw.rs  events.rs  image.rs  keys.rs  lib.rs  math.rs  rect.rs  rectangle.rs  sprite.rs  surface.rs  test.rs  time.rs  utility.rs  window.rs
rust_game/src/sprite/: animation.rs
rust_game/src/test/: surface_mock.rs
rust_game/src/utility/: draw_utility.rs
rust_game_sdl2/: Cargo.toml
rust_game_sdl2/src/: canvas.rs  context.rs  draw.rs  events.rs  image.rs  lib.rs  opencv_sdl2.rs  opencv_util.rs  surface.rs  window.rs
