[package]
name = "example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_game = { path = "../rust_game" }
rust_game_sdl2 = { path = "../rust_game_sdl2" }

# https://docs.rs/sdl2/latest/sdl2/
# https://docs.rs/crate/sdl2/0.22.0/source/README.md
# https://github.com/Rust-SDL2/rust-sdl2
sdl2 = "0.35.1"

keycodes = "0.1.*"

[[bin]]
name = "creature_animation"
path = "src/creature_animation/main.rs"

[[bin]]
name = "draw_shapes"
path = "src/draw_shapes/main.rs"

[[bin]]
name = "load_and_store_images"
path = "src/load_and_store_images/main.rs"

[[bin]]
name = "mouse_events"
path = "src/mouse_events/main.rs"

[[bin]]
name = "sdl2_example"
path = "src/sdl2_example/main.rs"