[package]
name = "rust_game_sdl2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_game = { path = "../rust_game" }

# https://docs.rs/sdl2/latest/sdl2/
# https://docs.rs/crate/sdl2/0.22.0/source/README.md
# https://github.com/Rust-SDL2/rust-sdl2
sdl2 = "0.35.1"

# https://opencv.org/releases/
# https://github.com/opencv/opencv
opencv = "0.62.0"

num-traits = "0.2.x"
num-derive = "0.3.x"